// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board All O 1`] = `
Array [
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Board All Triangle 1`] = `
Array [
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board All X 1`] = `
Array [
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>,
]
`;

exports[`Storyshots Board Default 1`] = `
Array [
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
    <button
      className="square"
      onClick={[Function]}
      type="button"
    />
  </div>,
]
`;

exports[`Storyshots Game Default 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next Player: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Game Tuen No 8 Winner O 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Winner: O
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #2
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #3
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #4
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #5
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #6
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #7
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #8
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Game Turn No 1 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next Player: O
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #1
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Game Turn No 2 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next Player: O
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #2
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Game Turn No 5 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        O
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
      <button
        className="square"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
      <button
        className="square"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next Player: O
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #2
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #3
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #4
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
          type="button"
        >
          Go to move #5
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Default 1`] = `
<button
  className="square"
  onClick={[Function]}
  type="button"
/>
`;

exports[`Storyshots Square O 1`] = `
<button
  className="square"
  onClick={[Function]}
  type="button"
>
  O
</button>
`;

exports[`Storyshots Square X 1`] = `
<button
  className="square"
  onClick={[Function]}
  type="button"
>
  X
</button>
`;
